[package]
name = "rokoko"
version = "0.0.0"

[dependencies]
cfg-if = "1"

# If toolchain is `nightly` then use `nightly` feature of `rokoko-macro`
[target.'cfg(nightly)'.dependencies.rokoko-macro]
path = "rokoko-macro"
features = ["nightly"]

# Otherwise
[target.'cfg(not(nightly))'.dependencies.rokoko-macro]
path = "rokoko-macro"

[features]
default = ["math", "component"]

#
# Provides convenient mathematical types, functions, etc.
#
math = []

#
# Provides structs `Empty`, `With` and trait `Component`
# for convenient turning on/off fields of structs.
#
component = []

[build-dependencies]
rustc_version = "0.4"
